--- a/home.html
+++ b/home.html
@@ -156,7 +156,7 @@
     body::-webkit-scrollbar-thumb {background-color: deepskyblue;}
     body::-webkit-scrollbar-track {background-color: #140722;}
     header{position: absolute;top: 0;left: 0;width: 100%;padding: 30px 100px;display: flex;justify-content: space-between;align-items: center;z-index: 4;}
-    header .logo{color: #ffffff;font-weight: 700;text-decoration: none;font-size: 2em;text-transform: uppercase;}
+    header .logo{color: #ffffff;font-weight: 700;text-decoration: none;font-size: 2em;text-transform: uppercase; position: absolute; left: 110px; top: 28px;}
     header .ul{display: flex;justify-content: center;align-items: center;color: #fff;}
     header .ul .li{list-style: none;margin-left: 20px;}
     header .ul .li a{text-decoration: none;padding: 6px 15px;color: #fff;border-radius: 20px;}
